--- a/INFO/1.md
+++ b/INFO/1.md
@@ -1,172 +1,53 @@
 ---
 layout: page
-title: ART
+title: AI
 permalink: /FOSS/1/
 ---
-
-# Rock Rapids ART Creative Hub
+## AI Prompt Resources for Job Hunting, Resumes, Side Hustles & Income
 
 ## Table of Contents
 - [Introduction](#introduction)
-- [Vision and Purpose](#vision-and-purpose)
-- [Local Creative Landscape](#local-creative-landscape)
-- [Featured Art Categories](#featured-art-categories)
-- [Artist Profile System](#artist-profile-system)
-- [Event Integration and Workshops](#event-integration-and-workshops)
-- [Economic Development Through Arts](#economic-development-through-arts)
-- [Visual Mapping and Discovery](#visual-mapping-and-discovery)
-- [Minimal Viable Prototype Development Roadmap](#minimal-viable-prototype-development-roadmap)
-- [Design Philosophy](#design-philosophy)
-- [AI and Content Processing Strategy](#ai-and-content-processing-strategy)
-- [Sister Applications](#sister-applications)
+- [Comprehensive Prompt Collections](#comprehensive-prompt-collections-often-include-relevant-categories)
+- [Resources with Specific Focus on Career/Income](#resources-with-specific-focus-or-strong-sections-on-careerincome)
+- [Tips for Using These Resources](#tips-for-using-these-resources)
 
 ## Introduction
 
-RockRapids.ART serves as a digital gallery and creative hub showcasing the diverse artistic talents of Rock Rapids residents and regional creators. This platform celebrates creativity in all forms—from traditional fine arts to unique crafts like quilting and woodworking—providing visibility for local artists and fostering a vibrant cultural community in Rock Rapids.
+Finding the right prompts can significantly enhance how you use AI for career advancement and exploring income opportunities. Below is a curated list of resources, including popular GitHub repositories and other collections, where you can find prompts tailored to these goals.
 
-## Vision and Purpose
+**Keep in Mind:** The field of AI and prompt engineering is rapidly evolving. While these resources are popular or well-regarded, always test and refine prompts for your specific needs and the AI model you are using.
 
-The RockRapids.ART platform will showcase the diverse artistic talents of Rock Rapids residents, creating a vibrant digital gallery that celebrates creativity in all its forms—from traditional fine arts to unique crafts like quilting, woodworking, and even culinary arts. This platform serves multiple purposes:
+## Comprehensive Prompt Collections (Often Include Relevant Categories)
 
-1. **Community Expression**: Providing a space where local creativity can be celebrated and shared
-2. **Cultural Documentation**: Creating a living archive of the community's artistic heritage and evolution
-3. **Economic Support**: Connecting artists with potential customers and commission opportunities
-4. **Educational Resource**: Inspiring future generations of Rock Rapids artists through visibility and mentorship
+1. **Awesome ChatGPT Prompts (GitHub)**  
+   * **Link:** [https://github.com/f/awesome-chatgpt-prompts](https://github.com/f/awesome-chatgpt-prompts)  
+   * **Relevance:** This is one of the most popular and extensive collections of prompts for ChatGPT. While broad, it contains sections and numerous user-submitted prompts that can be adapted for acting as a job interviewer, writing cover letters, generating business ideas, marketing copy, and more. You'll need to browse or search within the repository for specific career/business applications.  
+2. **Prompt Engineering Guide (GitHub & Website)**  
+   * **Link (GitHub):** [https://github.com/dair-ai/Prompt-Engineering-Guide](https://github.com/dair-ai/Prompt-Engineering-Guide)  
+   * **Link (Website):** [https://www.promptingguide.ai/](https://www.promptingguide.ai/)  
+   * **Relevance:** While more focused on *how* to engineer prompts, this guide provides foundational knowledge and examples that are crucial for creating effective prompts for *any* task, including complex ones like drafting business plans, refining resume sections, or preparing for interviews. It includes examples and links to datasets and tools.  
+3. **FlowGPT (Website)**  
+   * **Link:** [https://flowgpt.com/](https://flowgpt.com/)  
+   * **Relevance:** This platform allows users to share and discover prompts across various categories. It has dedicated sections or tags for Career, Resume, Marketing, Business, and Finance, making it a good place to find user-generated prompts specifically for job hunting, business development, and financial tasks.
 
-By highlighting the breadth of creative talent in the community, RockRapids.ART helps build cultural identity and pride while supporting the economic potential of local artists.
+## Resources with Specific Focus (or Strong Sections) on Career/Income
 
-## Local Creative Landscape
+4. **Learn Prompting (Website/Discord)**  
+   * **Link:** [https://learnprompting.org/](https://learnprompting.org/)  
+   * **Relevance:** Offers free courses and a community focused on prompt engineering. Their materials often cover practical applications, and the community (especially on Discord) is a place where users discuss prompts for various use cases, including professional development, content creation for businesses, and task automation.  
+5. **Various Blog Posts & Articles:**  
+   * **Relevance:** Many tech blogs, career advice sites (like The Muse, LinkedIn's blog), and AI-focused newsletters regularly publish articles with specific prompts for job searching (e.g., "AI prompts to ace your next interview," "Using ChatGPT to write your resume") or business ideation ("ChatGPT prompts for brainstorming startup ideas").  
+   * **How to Find:** Use search engines with queries like:  
+     * "ChatGPT prompts for cover letter"  
+     * "AI prompts for business plan"  
+     * "Best prompts for resume update AI"  
+     * "Generate side hustle ideas using AI prompts"
 
-Rock Rapids boasts a rich tapestry of artistic talent spanning various disciplines. The community's creative sector includes:
+## Tips for Using These Resources
 
-- Visual artists working in painting, drawing, photography, and digital media
-- Craft practitioners specializing in textiles, woodworking, pottery, and metalwork
-- Culinary artists creating everything from artisanal baked goods to preserves
-- Performing artists including musicians, dancers, and theatrical performers
-- Literary artists including poets, short story writers, and novelists
+* **Search Within Repos:** Use GitHub's search functionality within large repositories (like awesome-chatgpt-prompts) using keywords like "resume," "interview," "business idea," "marketing," "cover letter," etc.  
+* **Adapt and Iterate:** Prompts are starting points. You'll often need to tweak them based on the AI model you're using (GPT-4, Claude, Gemini, etc.) and your specific context. Add details about your background, the job you're applying for, or the type of business you envision.  
+* **Combine Prompts:** Chain prompts together for more complex tasks. For example, first generate business ideas, then ask the AI to evaluate the pros and cons of one specific idea, and then ask it to draft an initial marketing tagline.  
+* **Specify the Persona:** Tell the AI to act as a specific expert (e.g., "Act as a hiring manager at a tech company," "Act as a startup business consultant," "Act as a professional resume writer").
 
-This diverse creative community represents an important cultural and economic asset for Rock Rapids, with the potential for growth through increased visibility and support.
-
-## Featured Art Categories
-
-RockRapids.ART will organize creative content into several primary categories to ensure comprehensive representation:
-
-1. **Visual Arts**: Painting, drawing, photography, sculpture, and digital art
-2. **Crafts & Artisanal Work**: Quilting, woodworking, jewelry making, pottery, and textile arts
-3. **Culinary Arts**: Local food artisans, bakers, preserves makers, and specialty producers
-4. **Performing Arts**: Music, dance, theater, and other performance-based expression
-5. **Literary Arts**: Poetry, short stories, novels, and other written creative works
-6. **Collections**: Notable collections of historical artifacts, memorabilia, and curated objects
-7. **Public Art**: Murals, sculptures, and installations throughout the community
-
-This categorization ensures that all forms of creativity are valued and represented, moving beyond traditional definitions of "art" to embrace the full spectrum of creative expression in the community.
-
-## Artist Profile System
-
-Central to RockRapids.ART is a comprehensive artist profile system that provides creators with personalized digital presence. Each profile includes:
-
-- **Biographical information**: Introducing the artist, their background, and artistic philosophy
-- **Portfolio gallery**: Visual showcase of the artist's work with descriptive information
-- **Artist statement**: Personal expression of creative vision and approach
-- **Contact information**: Methods for commissioning work or making purchases
-- **Upcoming events**: Exhibitions, workshops, or other events featuring the artist
-- **Links to social media**: Integration with artists' existing online presence
-
-The profile system is designed to be user-maintained, allowing artists to update their information and add new work through a simple interface, ensuring content remains current with minimal administrative overhead.
-
-## Event Integration and Workshops
-
-RockRapids.ART will foster community connections through robust event features that highlight:
-
-- **Workshops and Classes**: Opportunities for community members to learn artistic skills
-- **Exhibition Announcements**: Upcoming shows featuring local artists
-- **Art Walks and Tours**: Organized experiences of public and private art collections
-- **Collaborative Projects**: Community-based art initiatives seeking participants
-- **Artist Talks**: Educational presentations by artists about their work and process
-
-These events will be directly integrated with the community-wide event system while providing art-specific context and details. The system will include tools for artists to easily create and promote their own workshops and classes, fostering a self-sustaining creative education ecosystem.
-
-## Economic Development Through Arts
-
-Beyond cultural enrichment, RockRapids.ART actively supports economic development through several mechanisms:
-
-- **Direct sales facilitation**: Connecting artists with customers interested in purchasing work
-- **Commission request system**: Enabling custom work requests from community members
-- **Tourism promotion**: Highlighting the local arts scene as a visitor attraction
-- **Grant and opportunity announcements**: Sharing funding opportunities for artists
-- **Market research tools**: Providing insights on art sales trends and customer preferences
-
-The platform recognizes the economic potential of creative industries and works to establish Rock Rapids as a regional arts destination, bringing new revenue streams to both artists and adjacent businesses like restaurants and accommodations.
-
-## Visual Mapping and Discovery
-
-To enhance discoverability of arts throughout the community, RockRapids.ART includes:
-
-- **Interactive map**: Geolocation of studios, galleries, public art installations, and arts-related businesses
-- **Studio tour information**: Details about open studio events and regular public hours
-- **Public art guide**: Documentation of murals, sculptures, and architectural features
-- **Thematic art trails**: Curated journeys connecting multiple artistic sites around specific themes
-
-This mapping functionality makes the physical arts landscape of Rock Rapids navigable for both residents and visitors, encouraging exploration and serendipitous discovery.
-
-## Minimal Viable Prototype Development Roadmap
-
-1. **Prerequisite Research**: Before launching anything, understand the [design philosophy](#design-philosophy) and gather intelligence on already available sources of information about local artists and creative events.
-
-2. **Architecture Development**: Create a general knowledgebase architecture to support a meta-directory of artists with fields for name, medium, biography, contact information, and image gallery, using the [technical architecture](https://rockrapids.github.io/communication/2025/03/29/RockRapidsApps.html#technical-architecture-1) with Remix as the primary framework.
-
-3. **Submission System**: Develop a simple submission form allowing artists, crafters, makers, and collectors to create and update their own profiles with minimal administrative oversight.
-
-4. **Display Framework**: Implement a responsive grid layout to showcase artist work with filtering by medium, style, and location.
-
-5. **Calendar Integration**: Build an events calendar integration for workshops and art-related activities that connects with the broader community event system.
-
-6. **Administrative Tools**: Create an admin dashboard for content moderation and featured artist selection to maintain quality and highlight diverse talents.
-
-7. **Launch Strategy**: Test and launch with 10-15 local artist profiles as initial content to demonstrate the platform's potential and attract additional participation.
-
-## Design Philosophy
-
-As with all Rock Rapids applications, RockRapids.ART adheres to a design philosophy focused on sustainability and practicality. This approach emphasizes:
-
-- **Reusing what has worked and will continue to be used**, rather than re-inventing new solutions
-- **Connecting existing systems and filling gaps** to create greater value
-- **Building simple solutions that future volunteers can maintain and improve**
-
-This philosophy is elaborated in several key strategic documents:
-
-- [Integrate Necessary Existing and Future Datastores](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-1.html): Leveraging existing data sources while preparing for evolving technologies
-- [Understand Local Participation In Online Platforms](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-2.html): Building on established digital behavior patterns
-- [Evaluate Local Platforms and Their Reach](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-3.html): Understanding the existing digital landscape
-- [Design For Maintainability and Extensibility](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-4.html): Creating systems that can be sustained by volunteer contributors
-- [Think About Where the App Ecosystem Will Be Built and Then Live](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-5.html): Considering the practical aspects of hosting and maintenance
-
-## AI and Content Processing Strategy
-
-RockRapids.ART recognizes the transformative potential of AI and content processing for enhancing the arts community. As detailed in [Jobs, Art, Economics: The Emergent Industry of Music/Content AI Data Annotation](https://rockrapids.github.io/communication/2025/04/01/RockRapidsApps-Step0-8.html), the PROCESSING of creative content represents a significant economic opportunity.
-
-While the spotlight often shines on the power of new sophisticated AI algorithms and user-facing applications, the progress of creative AI is fundamentally tethered to the quality and depth of the data it learns from. Processing of data, such as art and music AI data annotation, is not merely a preparatory step but a critical, ongoing process that shapes the capabilities and limitations of AI in understanding, organizing, generating, and interacting with creative content.
-
-RockRapids.ART will explore opportunities to:
-
-- Develop local expertise in creative content annotation and processing
-- Create potential remote work opportunities in AI training data preparation
-- Establish Rock Rapids as an innovative community in the creative AI landscape
-- Provide educational resources on the intersection of technology and creativity
-
-This focus on processing and annotation recognizes that the ability to effectively organize, categorize, and contextualize creative content is increasingly valuable in the digital economy.
-
-## Sister Applications
-
-RockRapids.ART is part of a suite of specialized applications, each addressing specific aspects of community life:
-
-- [Rockrapids.INFO](https://rockrapids.github.io/FOSS/0/): The central hub and gateway to all Rock Rapids applications
-- [Rockrapids.FUN](https://rockrapids.github.io/FOSS/2/): Highlighting recreational activities and entertainment options
-- [Rockrapids.GUIDE](https://rockrapids.github.io/FOSS/3/): Providing civic, school, church, and service provider information
-- [Rockrapids.SHOP](https://rockrapids.github.io/FOSS/4/): Featuring retail promotions and shopping events
-- [Rockrapids.STORE](https://rockrapids.github.io/FOSS/5/): Listing marketplace items and local products for sale
-- [Rockrapids.WORK](https://rockrapids.github.io/FOSS/6/): Connecting people with employment opportunities
-- [Rockrapids.XYZ](https://rockrapids.github.io/FOSS/7/): Coordinating volunteer activities and recognition
-
-Together, these applications form a comprehensive digital ecosystem designed to serve the diverse needs of the Rock Rapids community.
-
+By exploring these resources and experimenting with different prompts, you can leverage AI more effectively to achieve your career and financial goals.
